# rag_chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  deps.py  documents.py
backend/app/db/: __init__.py  postgres.py  redis.py
backend/app/models/: chat.py  document.py  llm_config.py
backend/app/services/: chat.py  document.py  embedding.py  firebase_auth.py  llm.py  memory.py  qdrant.py  rate_limiter.py  web_search.py
backend/data/documents/: 6450a1e2-e9fc-4a58-9573-7005860850d7.md  7ecb3a45-e088-4f90-91cd-1a1d065ffc82.md  819cb5c4-a68b-42b6-8503-0818e7a3f77e.txt
backend/ollama/: entrypoint.sh
backend/searxng/: settings.yml
deploy/: DEPLOY.md  deploy.sh  docker-compose.prod.yml  nginx.conf  setup-ec2.sh
docs/company_documents/: faq.txt  return_policy.md  warranty_terms.docx
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/contexts/: AdminContext.tsx  AuthContext.tsx
frontend/src/hooks/: index.ts  useAdmin.ts  useChat.ts  useConversations.ts  useDocuments.ts  useFingerprint.ts  useModels.ts  useSession.ts  useTheme.ts
frontend/src/lib/: firebase.ts  utils.ts
frontend/src/services/: api.ts  fingerprint.ts  index.ts
frontend/src/types/: chat.ts  document.ts  index.ts  llm.ts
(+65 files in other folders)
